@@ -5,6 +5,8 @@ import com.toDolist.apitest.Dto.TaskReqDto;
 import com.toDolist.apitest.Dto.TaskResDto;
 import com.toDolist.apitest.Model.TaskModel;
 import com.toDolist.apitest.Repository.TaskRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.scheduling.config.Task;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -12,6 +14,8 @@ import java.util.stream.Collectors;
 
 @Service
 public class TaskService {
+
+    @Autowired
     private TaskRepository repository;
 
     public TaskService(TaskRepository repository) {
@@ -23,15 +27,28 @@ public class TaskService {
         task.setDescricao(dto.descricao());
         return repository.save(task);
     }
-    public TaskModel findById(Long id) {
-        return repository.findById(id).orElseThrow(() -> new RuntimeException("tarefa nao encontrada"));
+    public TaskResDto findById(Long id) {
+        TaskModel task = repository.findById(id).orElseThrow(() -> new RuntimeException("tarefa nao encontrada"));
+        return TaskMapper.toDto(task);
     }
 
     public List<TaskResDto> findAll() {
         List<TaskModel> tasks = repository.findAll();
         return tasks.stream()
                 .map(TaskMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+    public List<TaskResDto> findByNomeContaing(String nome) {
+        List<TaskModel> tasks = repository.findByNomeContaining(nome);
+        return tasks.stream()
+                .map(TaskMapper::toDto)
+                .toList();
+    }
+    public List<TaskResDto> findByDescricaoContaining(String descricao) {
+        List<TaskModel> tasks = repository.findByDescricaoContainingIgnoreCase(descricao);
+        return tasks.stream()
+                .map(TaskMapper::toDto)
+                .toList();
     }
     public TaskModel update(Long id, TaskReqDto dto) {
         TaskModel task = repository.findById(id).orElseThrow(() -> new RuntimeException("tarefa nao encontrada"));
